fix column widths to avoid ugly squishing

--- a/src/components/ProfitAndLossDetailReport/profit_and_loss_detail_report.scss
+++ b/src/components/ProfitAndLossDetailReport/profit_and_loss_detail_report.scss
@@ -2,9 +2,9 @@
   --pnl-detail-date-col-width: 12%;
   --pnl-detail-type-col-width: 12%;
   --pnl-detail-account-col-width: 18%;
-  --pnl-detail-description-col-width: 28%;
-  --pnl-detail-amount-col-width: 15%;
-  --pnl-detail-balance-col-width: 15%;
+  --pnl-detail-description-col-width: 38%;
+  --pnl-detail-amount-col-width: 10%;
+  --pnl-detail-balance-col-width: 10%;
 }
 
 .Layer__UI__Table__ProfitAndLossDetailReport {
